# Van-Eyk

./: .gitignore  CMakeLists.txt  README  README.md  create_tarball.sh  grade.sh  main.cc  sandbox.py  siren.py  test.py  vaneyk.py
VanEyk/: README  nn.py
VanEyk/modules/: nn.py
include/: Distributions.h  tensor.h
modules/: .hello.cc.swp  hello.cc  hello.cpp  main.cc  nn.py
src/: tensor.cc
vaneyk/: Adam.py  __init__.py  __int__.py  backprop.py  engine.py  functions.py  grad.py  loss.py  nn.py  tensor.py  test.py
vaneyk/nn/: __init__.py  functional.py
